--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
     "karma-sinon-chai": "2.0.2",
     "karma-sourcemap-loader": "0.4.0",
     "lint-staged": "15.2.2",
+    "madge": "^6.1.0",
     "markdown-styles": "3.2.0",
     "micromatch": "4.0.5",
     "mocha": "10.4.0",
@@ -121,6 +122,7 @@
     "promise-polyfill": "8.3.0",
     "rollup": "4.14.0",
     "rollup-plugin-istanbul": "5.0.0",
+    "rollup-plugin-visualizer": "^5.12.0",
     "sauce-connect-launcher": "1.3.2",
     "selenium-webdriver": "4.19.0",
     "semver": "7.6.0",
